# AudioSubtitle

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
src/: Application.cpp  Application.h  AudioCapturer.cpp  AudioCapturer.h  AudioConverter.cpp  AudioConverter.h  CMakeLists.txt  Logger.cpp  SubtitleWidget.cpp  SubtitleWidget.h  TextTranslator.cpp  TextTranslator.h  config.json  main.cpp
